Tue Dec 14 22:27:26 2010                        Michael Jennings (mej)

Working on fixing ObjectSet initialization with object hashes.
----------------------------------------------------------------------
Tue Dec 14 22:51:50 2010                        Michael Jennings (mej)

add() and del() forceably use arrays now.  set("foo", undef) or
del("foo") will delete a member entirely.
----------------------------------------------------------------------
Wed Dec 15 00:42:11 2010                        Michael Jennings (mej)

Make sure array elements are unique when doing add().

Delete key if del() removes last array element.
----------------------------------------------------------------------
Wed Dec 15 00:47:09 2010                        Michael Jennings (mej)

set() for an array now deletes and add()s.
----------------------------------------------------------------------
Thu Dec 16 11:10:26 2010                        Michael Jennings (mej)

Use list address for configure.in.
----------------------------------------------------------------------
Thu Dec 16 12:59:25 2010                        Michael Jennings (mej)

Convert ModuleLoader to on-demand, class-based operation.  This is one
possibility of multiple ones we're considering...just want it in the
SVN history for potential future reference.
----------------------------------------------------------------------
Wed Dec 29 02:13:32 2010                        Michael Jennings (mej)

Use magic filehandle syntax <> if stdin isn't a tty.
----------------------------------------------------------------------
Wed Dec 29 19:39:49 2010                        Michael Jennings (mej)

Rearrange.  Tested, works fine.
----------------------------------------------------------------------
Sat Jan  1 16:07:12 2011                        Michael Jennings (mej)

Rearrange help display a bit to be more clear to the uninitiated.  :-)
----------------------------------------------------------------------