@@ -95,3 +95,7 @@ Sat Jan  1 16:07:12 2011                        Michael Jennings (mej)
 
 Rearrange help display a bit to be more clear to the uninitiated.  :-)
 ----------------------------------------------------------------------
+Sun Jan  2 05:36:34 2011                        Michael Jennings (mej)
+
+Work in progress:  Log target handling.
+----------------------------------------------------------------------
